--- a/contact.html
+++ b/contact.html
@@ -11,21 +11,23 @@
 </head>
 
 <body>
-        <header>
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                        <a class="home" href="index.html">Sam Cotter</a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                          <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                          <div class="navbar-nav">
-                            <a class="nav-item nav-link" href="index.html">About</a>
-                            <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-                            <a class="nav-item nav-link active" href="contact.html">Contact  <span class="sr-only">(current)</span></a>
-                          </div>
-                        </div>
-                      </nav>
-        </header>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="home" href="index.html">Sam Cotter</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ml-auto">
+                    <a class="nav-item nav-link" href="index.html">About</a>
+                    <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                    <a class="nav-item nav-link active" href="contact.html">Contact <span
+                            class="sr-only">(current)</span></a>
+                </div>
+            </div>
+        </nav>
+    </header>
 
     <div id="main">
         <div id="middle" class="text-center container-fluid container">
@@ -51,10 +53,9 @@
                                         placeholder="example@gmail.com">
                                 </div>
 
-                                <div class="form-group">
-                                    <label for="message" class="form-control" id="inputmessage"
-                                        placeholder="Please write here!"></label>
-                                </div>
+
+                                <label for="message">Message</label>
+                                <textarea id="message" name="message" required="required"></textarea>
 
                                 <button type="submit" class="btn btn-default">Submit</button>
                             </form>
@@ -62,15 +63,7 @@
                     </section>
                 </div>
 
-                <div class="col-md-4 text-left inside-pad">
-                    <div id="sidebar">
-                        <h3 class="title teal-text gray-line">
-                            Connect With Me!
-                        </h3>
-
-                    </div>
-
-                </div>
+        
             </div>
         </div>
     </div>
