--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
 
 <body>
     <header>
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="home" href="index.html">Sam Cotter</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                      <div class="navbar-nav">
-                        <a class="nav-item nav-link active" href="index.html">About <span class="sr-only">(current)</span></a>
-                        <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-                        <a class="nav-item nav-link" href="contact.html">Contact</a>
-                      </div>
-                    </div>
-                  </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="logo" href="index.html">Sam Cotter</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ml-auto">
+                    <a class="nav-item nav-link active" href="index.html">About <span
+                            class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+                    <a class="nav-item nav-link" href="contact.html">Contact</a>
+                </div>
+            </div>
+        </nav>
     </header>
 
 
@@ -34,12 +36,12 @@
             <div class="row">
                 <div class="col-md-8 inside-pad">
                     <section id="content" class="text-left">
-                        <h3 class="title teal-text gray-line">
+                        <h1 class="title teal-text gray-line">
                             About Sam
-                        </h3>
+                        </h1>
 
                         <div id="about" class="container">
-                            <img src="assets/images/untitled.png" id="headshot" title="headshot" height="330px">
+                            <img class="headshot" src="./assets/images/untitled.png" alt="headshot">
                             <p>Hello everyone and welcome to my portfolio. My name is Sam Cotter and I was born and
                                 raised in Seattle,
                                 Washington. I graduated from Landmark College in 2012 with an Associates Degree in
@@ -47,19 +49,19 @@
                                 Administration. I graduated from Southern Oregon University in 2017 with a Bachelors
                                 Degree in Business
                                 Administration with a Minor in Philosophy. </p>
-                                <br>
+                            <br>
                             <p>When I graduated from college in 2017 I had no real idea what I wanted to do with my
                                 life. I tried
                                 starting my own business, which failed. I spent some time working for my dad, and
                                 working for the car
                                 sharing service Zipcar before I got my current job at BMW Seattle. </p>
-                                <br>
+                            <br>
                             <p>In my free time, I enjoy working on my car, building models, flying my drone, and
                                 spending time with my
                                 family. I like going up to my family’s vacation house on Camano Island to either get
                                 away to get
                                 important work done, or to just sleep. </p>
-                                <br>
+                            <br>
                             <p>I am excited to get started and to show how ready I am to become a developer. </p>
                             <br>
 
@@ -69,6 +71,8 @@
             </div>
         </div>
     </div>
+
+
 
     <footer id="footer">
         Copyright &copy; 2019 Sam Cotter
